# utils_behavior

./: .gitignore  Ballpushing_utils.py  Combine.sh  EmptyArenas.py  HoloviewsTemplates.py  LICENSE  Optobot_utils.py  Processing.py  README.md  Test.py  example_videos.yaml  find_grid_videos.sh  grid_videos.yaml  package-lock.json  pyproject.toml  requirements.txt  setup.py
Old/: Gridvids_targets.py
Others/: CheckProgress.py  Check_trackdata.py  FrameCapture.py  GrabImage.py  Metadata_copier.py  OrderVideos.py  OutputTest.ipynb  Test.py
Sleap_utils/: F1_assign_ball_id.py  F1_to_process.yaml  Instances_Tracks_manipulation.ipynb  Make_annotated_video.py  Making_annotated_videos.ipynb  MaximeLabels.ipynb  convert_h5.sh  sleap_datasets.ipynb  sleap_utils_testing.ipynb  test_track_names.py
Tests/: Ballpushing_Testing.ipynb  Detect_boundaries.ipynb  Embedding_Testing.ipynb  Filter_and_make_video.ipynb  Seaborn_Testing.ipynb  TimeFrameManips.ipynb  Transform_data_testing.ipynb  conftest.py  print_h5_structure.py  test_dependency_hygiene.py  test_package.py  test_processing.py  test_sleap_tracks.py  test_utils.py
notebooks/ballpushing/: ballpushing_testing_2.ipynb
notebooks/misc/: EmptyArenas.ipynb  FlyExpDemo.ipynb  Interaction_Events.ipynb  NewClassTesting.ipynb  Output_test.ipynb  StatsSummary.ipynb  embedding_testing.ipynb  filter_and_make_video.ipynb  seaborn_testing.ipynb  umap_progress_measure.ipynb
notebooks/sleap/: H5_explorer.ipynb  Instances_Tracks_manipulation.ipynb  README.md
scripts/misc/: CheckProgress.py  CompareFolders.py  DeadDetector.py  EmptyDead_check.py  GrabImage.py  Make_TrackedVideo.py  Make_TrackedVideo_sample.py  Metadata_copier.py  stitch.sh
scripts/sleap/: Center_Circle.py  Check_h5.py  DrawLabels.py  GetLabels.py  MakeAnnotatedGrid.py  Make_annotated_video.py  README_optobot_pipeline.md  clean_tracks.py  cleanup_failed_attempts.py  convert_h5.py  convert_h5.sh  directional_velocity.py  make_video_list.py
scripts/video/: Gridvids.py  Gridvids_labs.py  compress_existing_videos.py  compress_videos_yaml.py  find_grid_videos.py  rename_compressed_videos.py  test_real_video_compression.py
utils_behavior/: Ballpushing_utils.py  Compute_Behavior_Map.py  Compute_Behavior_Map_Cuda.py  Compute_Behavior_Map_UMAP.py  Compute_PCA.py  Compute_TSNE_RangeHyper.py  DataSetBuilder.py  Data_dashboard.py  Filter_registry.py  Flywire_renderer.py  Generate_events_grid.py  HoloviewsPlots.py  HoloviewsTemplates.py  HoloviewsTemplates_Testing.py  MakeAnnotatedGrid.py  MakeNicknameGrid.py  MakeNicknameGrid_Cuda.py  Optobot_utils.py  Processing.py  Seaborn_Templates.py  SleapTracker.py  Sleap_utils.py  Transform_Contacts.py  Utils.py  __init__.py  check_rename_videos.py  compress_videos_yaml.py  requirements.txt  test_compression_settings.py
utils_behavior/Dataverse_utils/: archive_split_utils.py  prepare_ballscents_h5.py  prepare_balltypes_h5.py  prepare_f1_tnt_h5.py  prepare_f1_wildtype_h5.py  prepare_feedingstate_h5.py  prepare_magnetblock_h5.py  prepare_screen_h5.py  prepare_tnt_olfaction_dark_h5.py  prepare_trialduration_h5.py
utils_behavior/ballpushing/: __init__.py  concat_dataset.py  core.py  dataset.py  transform_contacts.py
utils_behavior/dashboard/: __init__.py  data_dashboard.py
utils_behavior/dataverse/: README.md  prepare_flat_copy.py  rename.py  upload.py
utils_behavior/embedding/: __init__.py  behavior_map.py  behavior_map_cuda.py  behavior_map_tf.py  behavior_map_umap.py  pca.py  tsne_range_hyper.py
utils_behavior/flywire/: __init__.py  brain_regions.py
utils_behavior/flywire/data/: CX.yaml
utils_behavior/grids/: __init__.py  generate_events_grid.py  generate_grid.py  make_nickname_grid.py  make_nickname_grid_cuda.py
utils_behavior/optobot/: __init__.py  optobot_utils.py
utils_behavior/plotting/: __init__.py  holoviews_plots.py  holoviews_templates.py  seaborn_templates.py
utils_behavior/sleap/: __init__.py  clean_tracks.py  convert.py  kinematics.py  sequences.py  stats.py  tracker.py  tracks.py
